完成了M0的实验8，实现了串口通讯

--- a/Test/lyx/.gitignore
+++ b/Test/lyx/.gitignore
@@ -7,3 +7,21 @@ simulation
 Listings
 Objects
 *.uvguix.liyuxuan
+*.d
+*.o
+*.crf
+*.dep
+*.htm
+*.hex
+*.axf
+*.lnp
+*.sct
+*.txt
+*.uvguix.Frank
+*.iex
+*.scvd
+
+*.tsm
+*.timing
+*.bid
+*.sdc
