--- a/Static/.gitignore
+++ b/Static/.gitignore
@@ -3,3 +3,5 @@ AT511-r2p0-00rel0-1
 M0_Experiments
 ARMCompiler_506_Windows_x86_b960
 Advanced_OK
+01-2_EG4_HDMI_TX_Test_1280720_backup
+AN88_VIP_Board_HDK_V1.0
