编写了一些C程序进行测试，基本成功，但刷新有问题

--- a/Test/lyx/Final/Keil/code.uvprojx
+++ b/Test/lyx/Final/Keil/code.uvprojx
@@ -434,6 +434,11 @@
               <FileType>5</FileType>
               <FilePath>.\src\Sleep.h</FilePath>
             </File>
+            <File>
+              <FileName>HDMI.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\HDMI.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
