--- a/Test/lyx/FinalCopy/Keil/code.uvprojx
+++ b/Test/lyx/FinalCopy/Keil/code.uvprojx
@@ -439,6 +439,11 @@
               <FileType>1</FileType>
               <FilePath>.\src\HDMI.c</FilePath>
             </File>
+            <File>
+              <FileName>Peripheral.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Peripheral.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
