--- a/PrismGC/Keil/code.uvprojx
+++ b/PrismGC/Keil/code.uvprojx
@@ -10,7 +10,7 @@
       <TargetName>Target 1</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
-      <pCCUsed>6160000::V6.16::ARMCLANG</pCCUsed>
+      <pCCUsed>6190000::V6.19::ARMCLANG</pCCUsed>
       <uAC6>1</uAC6>
       <TargetOption>
         <TargetCommonOption>
@@ -186,6 +186,7 @@
             <RvdsVP>0</RvdsVP>
             <RvdsMve>0</RvdsMve>
             <RvdsCdeCp>0</RvdsCdeCp>
+            <nBranchProt>0</nBranchProt>
             <hadIRAM2>0</hadIRAM2>
             <hadIROM2>0</hadIROM2>
             <StupSel>8</StupSel>
@@ -449,16 +450,6 @@
               <FilePath>.\src\GPULite.h</FilePath>
             </File>
             <File>
-              <FileName>GameFunc.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\src\GameFunc.c</FilePath>
-            </File>
-            <File>
-              <FileName>GameFunc.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\GameFunc.h</FilePath>
-            </File>
-            <File>
               <FileName>Buzzer.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\src\Buzzer.h</FilePath>
@@ -474,44 +465,39 @@
               <FilePath>.\src\HDMI.h</FilePath>
             </File>
             <File>
-              <FileName>HealthDetermination.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\src\HealthDetermination.c</FilePath>
-            </File>
-            <File>
-              <FileName>HealthDetermination.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\HealthDetermination.h</FilePath>
-            </File>
-            <File>
               <FileName>KeyBoard.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\src\KeyBoard.h</FilePath>
             </File>
             <File>
-              <FileName>LoadPage.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\src\LoadPage.c</FilePath>
-            </File>
-            <File>
-              <FileName>LoadPage.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\LoadPage.h</FilePath>
-            </File>
-            <File>
-              <FileName>ScoreDetermination.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\src\ScoreDetermination.c</FilePath>
-            </File>
-            <File>
-              <FileName>ScoreDetermination.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\ScoreDetermination.h</FilePath>
-            </File>
-            <File>
               <FileName>SDRAM.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\src\SDRAM.h</FilePath>
+            </File>
+            <File>
+              <FileName>GlobalDef.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\GlobalDef.h</FilePath>
+            </File>
+            <File>
+              <FileName>PageBlockGame.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\PageBlockGame.c</FilePath>
+            </File>
+            <File>
+              <FileName>PageBlockGame.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\PageBlockGame.h</FilePath>
+            </File>
+            <File>
+              <FileName>PageMain.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\PageMain.c</FilePath>
+            </File>
+            <File>
+              <FileName>PageMain.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\PageMain.h</FilePath>
             </File>
           </Files>
         </Group>
