--- a/PrismGC/Keil/code.uvprojx
+++ b/PrismGC/Keil/code.uvprojx
@@ -559,6 +559,26 @@
               <FileType>5</FileType>
               <FilePath>.\src\I2C.h</FilePath>
             </File>
+            <File>
+              <FileName>console.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\console.c</FilePath>
+            </File>
+            <File>
+              <FileName>console.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\console.h</FilePath>
+            </File>
+            <File>
+              <FileName>fmtio.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\fmtio.c</FilePath>
+            </File>
+            <File>
+              <FileName>fmtio.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\fmtio.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
