--- a/PrismGC/Keil/code.uvprojx
+++ b/PrismGC/Keil/code.uvprojx
@@ -579,6 +579,16 @@
               <FileType>5</FileType>
               <FilePath>.\src\fmtio.h</FilePath>
             </File>
+            <File>
+              <FileName>PageCharTest.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\PageCharTest.c</FilePath>
+            </File>
+            <File>
+              <FileName>PageCharTest.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\PageCharTest.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
